BLE connectios updated

--- a/app/src/main/res/layout/activity_aerial_scan.xml
+++ b/app/src/main/res/layout/activity_aerial_scan.xml
@@ -228,8 +228,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/button_small_height"
                     android:paddingHorizontal="8sp"
-                    android:text="@string/lb_edit_settings"
-                    android:textColor="@color/ebony_clay" />
+                    android:text="@string/lb_edit_settings" />
 
             </LinearLayout>
 
