--- a/app/src/main/res/layout/edit_frequencies.xml
+++ b/app/src/main/res/layout/edit_frequencies.xml
@@ -57,7 +57,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="@color/tall_poppy"
             android:gravity="center"
-            android:text="@string/lb_undo_changes"
+            android:text="Undo Changes"
             android:textColor="@color/white"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -78,7 +78,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="@color/mountain_meadow"
             android:gravity="center"
-            android:text="@string/lb_done"
+            android:text="Done"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="14sp"
