--- a/app/src/main/res/layout/activity_edit_tables.xml
+++ b/app/src/main/res/layout/activity_edit_tables.xml
@@ -15,128 +15,254 @@
             layout="@layout/toolbar"/>
 
         <LinearLayout
+            android:id="@+id/frequencies_overview_linearLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16sp"
-            android:layout_marginTop="24sp"
-            android:layout_marginEnd="16sp">
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:id="@+id/edit_options_linearLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16sp"
+                android:layout_marginTop="24sp"
+                android:layout_marginEnd="16sp"
+                android:layout_marginBottom="24sp"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/delete_frequencies_button"
+                    style="@style/button_tertiary"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/button_small_height"
+                    android:paddingStart="8sp"
+                    android:paddingEnd="8sp"
+                    android:text="@string/lb_delete_frequencies" />
+
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
+
+                <Button
+                    android:id="@+id/add_frequency_button"
+                    style="@style/button_primary"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/button_small_height"
+                    android:paddingStart="8sp"
+                    android:paddingEnd="8sp"
+                    android:text="@string/lb_add_frequency" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/message_linearLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16sp"
+                android:layout_marginTop="24sp"
+                android:layout_marginEnd="16sp"
+                android:layout_marginBottom="24sp"
+                android:background="@color/catskill_white"
+                android:elevation="4sp"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="16sp"
+                android:visibility="gone">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ellipse"
+                    android:gravity="center"
+                    android:padding="10sp"
+                    android:src="@drawable/ic_check_light" />
+
+                <TextView
+                    android:id="@+id/message_textView"
+                    style="@style/body_large"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:textColor="@color/light_blue" />
+
+                <ImageView
+                    android:id="@+id/close_message_imageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ic_close" />
+
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/number_table_textView"
                 style="@style/subtitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16sp"
+                android:layout_marginBottom="16sp"
+                android:text="@string/lb_tap_frequency"
                 android:textColor="@color/black" />
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                tools:ignore="NestedWeights">
+
+                <LinearLayout
+                    android:id="@+id/frequencies_linearLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16sp"
+                    android:layout_marginEnd="16sp"
+                    android:orientation="vertical" />
+
+            </ScrollView>
 
         </LinearLayout>
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/receiver_logo"
-            android:layout_marginStart="16sp"
-            android:layout_marginTop="16sp"
-            android:layout_marginEnd="16sp"
-            android:background="@color/catskill_white"
-            android:elevation="4sp"
-            android:padding="16sp">
-
-            <TableLayout
-                android:id="@+id/frequency_table"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" />
-
-        </ScrollView>
-
         <LinearLayout
-            android:id="@+id/edit_table_options_linearLayout"
+            android:id="@+id/no_frequencies_linearLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16sp"
-            android:layout_marginEnd="16sp"
-            android:elevation="4sp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
             android:orientation="vertical"
             android:visibility="gone">
 
-            <View
+            <TextView
+                style="@style/subtitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16sp"
+                android:text="@string/lb_no_frequencies"
+                android:textColor="@color/black" />
+
+            <Button
+                android:id="@+id/add_new_frequency_button"
+                style="@style/button_primary"
                 android:layout_width="match_parent"
-                android:layout_height="1sp"
-                android:background="@color/light_gray"
-                tools:ignore="SmallSp" />
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16sp"
+                android:layout_marginEnd="16sp"
+                android:layout_marginBottom="24sp"
+                android:text="@string/lb_add_frequency" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/frequency_edit_linearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:visibility="gone">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16sp"
+                android:layout_marginTop="48sp"
+                android:layout_marginEnd="16sp"
                 android:background="@color/catskill_white"
-                android:gravity="center">
+                android:elevation="4sp"
+                android:orientation="vertical"
+                android:padding="16sp">
 
-                <Button
-                    android:id="@+id/discard_changes_button"
-                    style="@style/button_tertiary"
+                <TextView
+                    android:id="@+id/enter_frequency_textView"
+                    style="@style/body_regular"
                     android:layout_width="wrap_content"
-                    android:layout_height="@dimen/button_small_height"
-                    android:layout_margin="16sp"
-                    android:paddingStart="8sp"
-                    android:paddingEnd="8sp"
-                    android:text="@string/lb_discard_changes"
-                    android:textColor="@color/ebony_clay"
-                    android:visibility="visible" />
-
-                <Space
-                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:layout_marginBottom="16sp" />
 
-                <Button
-                    android:id="@+id/edit_frequency_table_button"
-                    style="@style/button_secondary"
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/button_small_height"
-                    android:layout_margin="16sp"
-                    android:text="@string/lb_edit_table" />
+                <EditText
+                    android:id="@+id/frequency_editText"
+                    style="@style/body_regular"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/border_enter"
+                    android:inputType="number"
+                    android:padding="16sp" />
+
+                <TextView
+                    android:id="@+id/edit_frequency_message_textView"
+                    style="@style/paragraph_small"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8sp" />
 
             </LinearLayout>
 
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                tools:ignore="NestedWeights" />
+
+            <Button
+                android:id="@+id/save_changes_button"
+                style="@style/button_primary"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16sp"
+                android:layout_marginEnd="16sp"
+                android:layout_marginBottom="24sp"
+                android:alpha="0.6"
+                android:enabled="false"
+                android:text="@string/lb_save_changes" />
+
         </LinearLayout>
 
-        <Space
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/delete_frequencies_linearLayout"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:visibility="gone">
 
-        <TextView
-            android:id="@+id/edit_table_message_textView"
-            style="@style/body_small"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="8sp"
-            android:text="@string/lb_edit_table_in_order"
-            android:textColor="@color/ebony_clay"
-            android:visibility="gone" />
+            <TextView
+                style="@style/subtitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16sp"
+                android:layout_marginTop="24sp"
+                android:layout_marginBottom="16sp"
+                android:text="@string/lb_select_frequencies_delete"
+                android:textColor="@color/black" />
 
-        <Button
-            android:id="@+id/edit_table_option_button"
-            style="@style/button_primary"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16sp"
-            android:layout_marginEnd="16sp"
-            android:layout_marginBottom="24sp"
-            android:text="@string/lb_edit_table" />
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                tools:ignore="NestedWeights">
 
-        <Button
-            android:id="@+id/save_changes_button"
-            style="@style/button_primary"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16sp"
-            android:layout_marginEnd="16sp"
-            android:layout_marginBottom="24sp"
-            android:alpha="0.6"
-            android:enabled="false"
-            android:text="@string/lb_save_changes"
-            android:visibility="gone" />
+                <LinearLayout
+                    android:id="@+id/select_frequencies_linearLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16sp"
+                    android:layout_marginEnd="16sp"
+                    android:orientation="vertical" />
+
+            </ScrollView>
+
+            <Button
+                android:id="@+id/delete_selected_frequencies_button"
+                style="@style/button_primary"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16sp"
+                android:layout_marginEnd="16sp"
+                android:layout_marginBottom="24sp"
+                android:alpha="0.6"
+                android:enabled="false"
+                android:text="@string/lb_delete_frequencies" />
+
+        </LinearLayout>
 
         <include
             layout="@layout/receiver_status"/>
