--- a/app/src/main/res/layout/activity_get_data.xml
+++ b/app/src/main/res/layout/activity_get_data.xml
@@ -119,6 +119,30 @@
                 android:layout_marginBottom="24sp"
                 android:text="@string/lb_download_data" />
 
+            <!--LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_marginHorizontal="16sp"
+                android:layout_marginBottom="16sp"
+                style="@style/button_primary">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_lock"
+                    android:layout_marginEnd="8sp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Hold"
+                    style="@style/text_button"
+                    android:textColor="@color/catskill_white"/>
+
+            </LinearLayout-->
+
         </LinearLayout>
 
         <include
