edit table in aerial scanning

--- a/app/src/main/res/drawable/button_secondary.xml
+++ b/app/src/main/res/drawable/button_secondary.xml
@@ -4,5 +4,5 @@
         android:angle="90"
         android:endColor="#C6F7E2"
         android:startColor="#ACF3D5" />
-    <corners android:radius="50sp"/>
+    <corners android:radius="@dimen/border_radius"/>
 </shape>
