--- a/app/src/main/res/layout/activity_get_data.xml
+++ b/app/src/main/res/layout/activity_get_data.xml
@@ -14,136 +14,23 @@
         <include
             layout="@layout/toolbar"/>
 
-        <LinearLayout
-            android:id="@+id/download_data_linearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:visibility="gone">
+        <include
+            layout="@layout/menu_manage_receiver"/>
 
-            <TextView
-                android:id="@+id/percentage_textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16sp"
-                android:textColor="@color/light_blue"
-                android:textSize="16sp" />
+        <include
+            layout="@layout/begin_download"/>
 
-            <!--ImageView
-                android:id="@+id/iv_ProgressGIF"
-                android:layout_width="170.67dp"
-                android:layout_height="21.33dp"/-->
+        <include
+            layout="@layout/downloading_file"/>
 
-            <ImageView
-                android:id="@+id/iv_ProgressGIF"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+        <include
+            layout="@layout/download_complete"/>
 
-        </LinearLayout>
+        <include
+            layout="@layout/delete_data_receiver"/>
 
-        <LinearLayout
-            android:id="@+id/menu_manage_receiver_linearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16sp"
-                android:layout_marginTop="24sp"
-                android:background="@color/catskill_white"
-                android:elevation="4sp"
-                android:orientation="vertical"
-                android:padding="16sp">
-
-                <TextView
-                    android:id="@+id/memory_used_percent_textView"
-                    style="@style/subtitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8sp"
-                    android:textColor="@color/ebony_clay" />
-
-                <ProgressBar
-                    android:id="@+id/memory_used_progressBar"
-                    style="?android:attr/progressBarStyleHorizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="24sp"
-                    android:progressDrawable="@drawable/progress_bar" />
-
-                <TextView
-                    android:id="@+id/bytes_stored_textView"
-                    style="@style/body_small"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8sp"
-                    android:textColor="@color/ebony_clay" />
-
-            </LinearLayout>
-
-            <Space
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                tools:ignore="NestedWeights" />
-
-            <Button
-                android:id="@+id/erase_data_button"
-                style="@style/button_tertiary"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16sp"
-                android:layout_marginBottom="16sp"
-                android:text="@string/lb_erase_data" />
-
-            <Button
-                android:id="@+id/memory_button"
-                style="@style/button_secondary"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16sp"
-                android:layout_marginBottom="16sp"
-                android:text="@string/lb_view_data" />
-
-            <Button
-                android:id="@+id/download_data_button"
-                style="@style/button_primary"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16sp"
-                android:layout_marginBottom="24sp"
-                android:text="@string/lb_download_data" />
-
-            <!--LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center"
-                android:layout_marginHorizontal="16sp"
-                android:layout_marginBottom="16sp"
-                style="@style/button_primary">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_lock"
-                    android:layout_marginEnd="8sp"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Hold"
-                    style="@style/text_button"
-                    android:textColor="@color/catskill_white"/>
-
-            </LinearLayout-->
-
-        </LinearLayout>
+        <include
+            layout="@layout/deletion_data_receiver_complete"/>
 
         <include
             layout="@layout/receiver_status"/>
