--- a/app/src/main/res/drawable/border.xml
+++ b/app/src/main/res/drawable/border.xml
@@ -2,5 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="1sp"
-        android:color="@color/black" />
+        android:color="@color/ghost" />
+    <corners android:radius="@dimen/border_radius"/>
 </shape>
