--- a/app/src/main/res/drawable/button_primary.xml
+++ b/app/src/main/res/drawable/button_primary.xml
@@ -4,5 +4,5 @@
         android:angle="90"
         android:endColor="#1BA786"
         android:startColor="#147D64" />
-    <corners android:radius="50sp"/>
+    <corners android:radius="@dimen/border_radius"/>
 </shape>
