--- a/app/src/main/res/drawable/button_secondary_light.xml
+++ b/app/src/main/res/drawable/button_secondary_light.xml
@@ -3,5 +3,5 @@
     <stroke
         android:width="1sp"
         android:color="@color/white_ice" />
-    <corners android:radius="50sp"/>
+    <corners android:radius="@dimen/border_radius"/>
 </shape>
