--- a/app/src/main/res/layout/activity_input_value.xml
+++ b/app/src/main/res/layout/activity_input_value.xml
@@ -14,279 +14,11 @@
         <include
             layout="@layout/toolbar"/>
 
-        <LinearLayout
-            android:id="@+id/set_value_linearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="16sp"
-            android:layout_weight="1"
-            android:background="@color/catskill_white"
-            android:orientation="vertical"
-            android:padding="16sp"
-            android:visibility="gone">
+        <include
+            layout="@layout/set_value"/>
 
-            <TextView
-                style="@style/body_small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/lb_set_value"
-                android:textColor="@color/limed_spruce" />
-
-            <Spinner
-                android:id="@+id/value_spinner"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/input_height"
-                android:layout_marginVertical="8sp"
-                android:background="@color/athens_gray" />
-
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                tools:ignore="NestedWeights" />
-
-            <Button
-                android:id="@+id/save_changes_input_value_button"
-                style="@style/button_primary"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/lb_save_changes" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/store_rate_linearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:elevation="4sp"
-            android:orientation="vertical"
-            android:padding="16sp"
-            android:visibility="gone">
-
-            <TextView
-                style="@style/subtitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8sp"
-                android:layout_marginBottom="8sp"
-                android:text="@string/lb_select_store_rate"
-                android:textColor="@color/limed_spruce" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/catskill_white"
-                android:elevation="4sp"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:id="@+id/no_store_rate_linearLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                    android:padding="16sp">
-
-                    <TextView
-                        style="@style/body_regular"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/lb_no_store_rate"
-                        android:textColor="@color/ebony_clay" />
-
-                    <Space
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1" />
-
-                    <ImageView
-                        android:id="@+id/no_store_rate_imageView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/ic_check"
-                        android:visibility="gone" />
-
-                </LinearLayout>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1sp"
-                    android:background="@color/light_gray"
-                    tools:ignore="SmallSp" />
-
-                <LinearLayout
-                    android:id="@+id/five_minutes_linearLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                    android:padding="16sp">
-
-                    <TextView
-                        style="@style/body_regular"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/lb_5_minutes"
-                        android:textColor="@color/ebony_clay" />
-
-                    <Space
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1" />
-
-                    <ImageView
-                        android:id="@+id/five_minutes_imageView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/ic_check"
-                        android:visibility="gone" />
-
-                </LinearLayout>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1sp"
-                    android:background="@color/light_gray"
-                    tools:ignore="SmallSp" />
-
-                <LinearLayout
-                    android:id="@+id/ten_minutes_linearLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                    android:padding="16sp">
-
-                    <TextView
-                        style="@style/body_regular"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/lb_10_minutes"
-                        android:textColor="@color/ebony_clay" />
-
-                    <Space
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1" />
-
-                    <ImageView
-                        android:id="@+id/ten_minutes_imageView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/ic_check"
-                        android:visibility="gone" />
-
-                </LinearLayout>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1sp"
-                    android:background="@color/light_gray"
-                    tools:ignore="SmallSp" />
-
-                <LinearLayout
-                    android:id="@+id/twenty_minutes_linearLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                    android:padding="16sp">
-
-                    <TextView
-                        style="@style/body_regular"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/lb_20_minutes"
-                        android:textColor="@color/ebony_clay" />
-
-                    <Space
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1" />
-
-                    <ImageView
-                        android:id="@+id/twenty_minutes_imageView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/ic_check"
-                        android:visibility="gone" />
-
-                </LinearLayout>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1sp"
-                    android:background="@color/light_gray"
-                    tools:ignore="SmallSp" />
-
-                <LinearLayout
-                    android:id="@+id/thirty_minutes_linearLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                    android:padding="16sp">
-
-                    <TextView
-                        style="@style/body_regular"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/lb_30_minutes"
-                        android:textColor="@color/ebony_clay" />
-
-                    <Space
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1" />
-
-                    <ImageView
-                        android:id="@+id/thirty_minutes_imageView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/ic_check"
-                        android:visibility="gone" />
-
-                </LinearLayout>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1sp"
-                    android:background="@color/light_gray"
-                    tools:ignore="SmallSp" />
-
-                <LinearLayout
-                    android:id="@+id/sixty_minutes_linearLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                    android:padding="16sp">
-
-                    <TextView
-                        style="@style/body_regular"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/lb_60_minutes"
-                        android:textColor="@color/ebony_clay" />
-
-                    <Space
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1" />
-
-                    <ImageView
-                        android:id="@+id/sixty_minutes_imageView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/ic_check"
-                        android:visibility="gone" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-        </LinearLayout>
+        <include
+            layout="@layout/store_rate_values"/>
 
         <include
             layout="@layout/receiver_status"/>
