--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -1,196 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/athens_gray"
     tools:context=".MainMenuActivity">
 
-    <LinearLayout
-        android:id="@+id/menu_linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:visibility="gone">
+    <include
+        layout="@layout/connecting_receiver"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@color/mountain_meadow"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:padding="16sp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="8sp"
-                    android:src="@drawable/ic_battery_full_light" />
-
-                <TextView
-                    android:id="@+id/percent_battery_menu_textView"
-                    style="@style/body_small"
-                    android:layout_width="wrap_content"
-                    android:layout_height="fill_parent"
-                    android:textColor="@color/catskill_white" />
-
-                <Space
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
-
-                <Button
-                    android:id="@+id/disconnect_button"
-                    style="@style/button_secondary_light"
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/button_small_height"
-                    android:paddingHorizontal="20sp"
-                    android:text="@string/lb_disconnect" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="@dimen/connect_image"
-                android:layout_height="@dimen/connect_image"
-                android:layout_marginTop="35sp"
-                android:layout_marginBottom="24sp"
-                android:background="@drawable/connected"
-                android:elevation="4sp"
-                android:gravity="center">
-
-                <ImageView
-                    android:layout_width="@dimen/receiver_connect"
-                    android:layout_height="@dimen/receiver_connect"
-                    android:src="@drawable/receiver" />
-
-            </LinearLayout>
-
-            <TextView
-                style="@style/h1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/lb_receiver_connected"
-                android:textColor="@color/catskill_white" />
-
-            <TextView
-                android:id="@+id/status_device_menu_textView"
-                style="@style/subtitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12sp"
-                android:layout_marginBottom="8sp"
-                android:textColor="@color/catskill_white" />
-
-        </LinearLayout>
-
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <Button
-                android:id="@+id/view_receiver_options_button"
-                style="@style/button_secondary"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16sp"
-                android:layout_marginTop="8sp"
-                android:layout_marginEnd="16sp"
-                android:layout_marginBottom="16sp"
-                android:text="@string/lb_view_receiver_options" />
-
-            <Button
-                android:id="@+id/start_scanning_button"
-                style="@style/button_primary"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16sp"
-                android:layout_marginEnd="16sp"
-                android:layout_marginBottom="24sp"
-                android:text="@string/lb_start_scanning" />
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/vhf_constraintLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:visibility="visible">
-
-        <LinearLayout
-            android:layout_width="@dimen/receiver_logo"
-            android:layout_height="@dimen/receiver_logo"
-            android:background="@drawable/receiver_logo"
-            android:elevation="4sp"
-            android:gravity="center"
-            app:layout_constraintBottom_toTopOf="@id/center"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
-
-            <ImageView
-                android:layout_width="@dimen/receiver_image"
-                android:layout_height="@dimen/receiver_image"
-                android:layout_gravity="center"
-                android:src="@drawable/receiver" />
-
-        </LinearLayout>
-
-        <ImageView
-            android:id="@+id/center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <LinearLayout
-            android:id="@+id/connecting_device_linearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="64sp"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:visibility="visible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/center">
-
-            <ImageView
-                android:id="@+id/check_avd_anim"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/state_textView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="16sp"
-                android:gravity="center"
-                android:text="@string/lb_connecting_device"
-                android:textAppearance="@style/body_large"
-                android:textColor="@color/light_blue" />
-
-        </LinearLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <include
+        layout="@layout/main_menu"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
