--- a/app/src/main/res/layout/activity_set_transmitter_type.xml
+++ b/app/src/main/res/layout/activity_set_transmitter_type.xml
@@ -338,6 +338,7 @@
                                         style="@style/body_regular"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
+                                        android:text="0"
                                         android:textColor="@color/ebony_clay" />
 
                                 </LinearLayout>
@@ -376,6 +377,7 @@
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:paddingHorizontal="8sp"
+                                            android:text="01"
                                             android:textColor="@color/ebony_clay" />
 
                                     </LinearLayout>
@@ -431,6 +433,7 @@
                                         style="@style/body_regular"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
+                                        android:text="0"
                                         android:textColor="@color/ebony_clay" />
 
                                 </LinearLayout>
@@ -469,6 +472,7 @@
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:paddingHorizontal="8sp"
+                                            android:text="01"
                                             android:textColor="@color/ebony_clay" />
 
                                     </LinearLayout>
@@ -524,6 +528,7 @@
                                         style="@style/body_regular"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
+                                        android:text="0"
                                         android:textColor="@color/ebony_clay" />
 
                                 </LinearLayout>
@@ -562,6 +567,7 @@
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:paddingHorizontal="8sp"
+                                            android:text="01"
                                             android:textColor="@color/ebony_clay" />
 
                                     </LinearLayout>
@@ -617,6 +623,7 @@
                                         style="@style/body_regular"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
+                                        android:text="0"
                                         android:textColor="@color/ebony_clay"
                                         tools:ignore="HardcodedText" />
 
@@ -656,6 +663,7 @@
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:paddingHorizontal="8sp"
+                                            android:text="01"
                                             android:textColor="@color/ebony_clay"
                                             tools:ignore="HardcodedText" />
 
