--- a/app/src/main/res/layout/activity_start_scanning.xml
+++ b/app/src/main/res/layout/activity_start_scanning.xml
@@ -14,39 +14,11 @@
         <include
             layout="@layout/toolbar"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginVertical="8sp"
-            android:layout_weight="1"
-            android:orientation="vertical">
+        <include
+            layout="@layout/menu_scan"/>
 
-            <Button
-                android:id="@+id/start_manual_scan_button"
-                style="@style/button_rectangle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16sp"
-                android:layout_marginTop="16sp"
-                android:text="@string/lb_manual_scan" />
-
-            <Button
-                android:id="@+id/start_aerial_scan_button"
-                style="@style/button_rectangle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="16sp"
-                android:text="@string/lb_aerial_scan" />
-
-            <Button
-                android:id="@+id/start_stationary_scan_button"
-                style="@style/button_rectangle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16sp"
-                android:text="@string/lb_stationary_scan" />
-
-        </LinearLayout>
+        <include
+            layout="@layout/warning_no_tables"/>
 
         <include
             layout="@layout/receiver_status"/>
