--- a/app/src/main/res/layout/activity_stationary_scan.xml
+++ b/app/src/main/res/layout/activity_stationary_scan.xml
@@ -14,395 +14,11 @@
         <include
             layout="@layout/toolbar"/>
 
-        <LinearLayout
-            android:id="@+id/ready_stationary_scan_LinearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginVertical="8sp"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:visibility="visible">
-
-            <TextView
-                android:id="@+id/ready_stationary_textView"
-                style="@style/subtitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="16sp"
-                android:text="@string/lb_current_settings" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16sp"
-                android:background="@color/catskill_white"
-                android:elevation="4sp"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:weightSum="2">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.4"
-                        android:gravity="center_vertical"
-                        android:orientation="vertical"
-                        android:padding="16sp">
-
-                        <TextView
-                            style="@style/body_small"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="8sp"
-                            android:text="@string/lb_selected_frequency"
-                            android:textColor="@color/limed_spruce" />
-
-                        <TextView
-                            android:id="@+id/selected_frequency_stationary_textView"
-                            style="@style/body_regular"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textColor="@color/ebony_clay" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1.6"
-                        android:gravity="center_vertical"
-                        android:orientation="vertical"
-                        android:padding="16sp">
-
-                        <TextView
-                            style="@style/body_small"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="8sp"
-                            android:text="@string/lb_scan_rate_seconds"
-                            android:textColor="@color/limed_spruce" />
-
-                        <TextView
-                            android:id="@+id/scan_rate_stationary_textView"
-                            style="@style/body_regular"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textColor="@color/ebony_clay" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1sp"
-                    android:background="@color/light_gray"
-                    tools:ignore="SmallSp" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:weightSum="2">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center_vertical"
-                        android:orientation="vertical"
-                        android:padding="16sp">
-
-                        <TextView
-                            style="@style/body_small"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="8sp"
-                            android:text="@string/lb_timeout"
-                            android:textColor="@color/limed_spruce" />
-
-                        <TextView
-                            android:id="@+id/timeout_stationary_textView"
-                            style="@style/body_regular"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textColor="@color/ebony_clay" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center_vertical"
-                        android:orientation="vertical"
-                        android:padding="16sp">
-
-                        <TextView
-                            style="@style/body_small"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="8sp"
-                            android:text="@string/lb_number_antennas"
-                            android:textColor="@color/limed_spruce" />
-
-                        <TextView
-                            android:id="@+id/number_antennas_stationary_textView"
-                            style="@style/body_regular"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textColor="@color/ebony_clay" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1sp"
-                    android:background="@color/light_gray"
-                    tools:ignore="SmallSp" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:weightSum="2">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1.2"
-                        android:gravity="center_vertical"
-                        android:orientation="vertical"
-                        android:padding="16sp">
-
-                        <TextView
-                            style="@style/body_small"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="8sp"
-                            android:text="@string/lb_store_rate"
-                            android:textColor="@color/limed_spruce" />
-
-                        <TextView
-                            android:id="@+id/store_rateC_stationary_textView"
-                            style="@style/body_regular"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textColor="@color/ebony_clay" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.8"
-                        android:gravity="center_vertical"
-                        android:orientation="vertical"
-                        android:padding="16sp">
-
-                        <TextView
-                            style="@style/body_small"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="8sp"
-                            android:text="@string/lb_external_data_transfer"
-                            android:textColor="@color/limed_spruce" />
-
-                        <TextView
-                            android:id="@+id/external_data_transfer_stationary_textView"
-                            style="@style/body_regular"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textColor="@color/ebony_clay" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <Space
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                tools:ignore="NestedWeights" />
-
-            <TextView
-                android:id="@+id/frequency_empty_textView"
-                style="@style/body_small"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="16sp"
-                android:gravity="center"
-                android:text="@string/lb_frequency_empty"
-                android:textColor="@color/tall_poppy"
-                android:visibility="gone" />
-
-            <Button
-                android:id="@+id/edit_stationary_settings_button"
-                style="@style/button_secondary"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16sp"
-                android:text="@string/lb_edit_settings" />
-
-            <Button
-                android:id="@+id/start_stationary_button"
-                style="@style/button_primary"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="16sp"
-                android:text="@string/lb_start_scanning" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/stationary_result_linearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginVertical="8sp"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:visibility="gone">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="16sp"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <TextView
-                    style="@style/subtitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/lb_scan_details"
-                    android:textColor="@color/ebony_clay" />
-
-                <Space
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
-
-                <Button
-                    android:id="@+id/edit_settings_stationary_button"
-                    style="@style/button_tertiary"
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/button_small_height"
-                    android:paddingHorizontal="8sp"
-                    android:text="@string/lb_edit_settings" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16sp"
-                android:layout_marginBottom="16sp"
-                android:background="@color/catskill_white"
-                android:elevation="4sp"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center_vertical"
-                        android:orientation="vertical"
-                        android:padding="16sp">
-
-                        <TextView
-                            style="@style/body_small"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="8sp"
-                            android:text="@string/lb_frequency"
-                            android:textColor="@color/limed_spruce" />
-
-                        <TextView
-                            android:id="@+id/frequency_stationary_textView"
-                            style="@style/body_regular"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textColor="@color/ebony_clay" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center_vertical"
-                        android:orientation="vertical"
-                        android:padding="16sp">
-
-                        <TextView
-                            style="@style/body_small"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="8sp"
-                            android:text="@string/lb_current_antenna"
-                            android:textColor="@color/limed_spruce" />
-
-                        <TextView
-                            android:id="@+id/current_antenna_stationary_textView"
-                            style="@style/body_regular"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textColor="@color/ebony_clay" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center_vertical"
-                        android:orientation="vertical"
-                        android:padding="16sp">
-
-                        <TextView
-                            style="@style/body_small"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="8sp"
-                            android:text="@string/lb_table"
-                            android:textColor="@color/limed_spruce" />
-
-                        <TextView
-                            android:id="@+id/table_stationary_textView"
-                            style="@style/body_regular"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textColor="@color/ebony_clay" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1sp"
-                    android:background="@color/light_gray"
-                    tools:ignore="SmallSp" />
-
-                <include
-                    layout="@layout/scan_details"/>
-
-            </LinearLayout>
-
-        </LinearLayout>
+        <include
+            layout="@layout/stationary_current_settings"/>
+
+        <include
+            layout="@layout/stationary_scanning"/>
 
         <include
             layout="@layout/receiver_status"/>
