--- a/app/src/template/res/drawable/ic_lock.xml
+++ b/app/src/template/res/drawable/ic_lock.xml
@@ -1,20 +1,20 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:width="16dp"
+    android:height="16dp"
+    android:viewportWidth="16"
+    android:viewportHeight="16">
   <path
-      android:pathData="M19,11H5C3.8954,11 3,11.8954 3,13V20C3,21.1046 3.8954,22 5,22H19C20.1046,22 21,21.1046 21,20V13C21,11.8954 20.1046,11 19,11Z"
+      android:pathData="M12.6667,7.3333H3.3333C2.597,7.3333 2,7.9302 2,8.6666V13.3333C2,14.0696 2.597,14.6666 3.3333,14.6666H12.6667C13.403,14.6666 14,14.0696 14,13.3333V8.6666C14,7.9302 13.403,7.3333 12.6667,7.3333Z"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#C6F7E2"
+      android:strokeColor="#147D64"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M7,11V7C7,5.6739 7.5268,4.4022 8.4645,3.4645C9.4022,2.5268 10.6739,2 12,2C13.3261,2 14.5979,2.5268 15.5355,3.4645C16.4732,4.4022 17,5.6739 17,7V11"
+      android:pathData="M4.667,7.3333V4.6666C4.667,3.7825 5.0182,2.9347 5.6433,2.3096C6.2684,1.6844 7.1163,1.3333 8.0003,1.3333C8.8844,1.3333 9.7322,1.6844 10.3573,2.3096C10.9825,2.9347 11.3337,3.7825 11.3337,4.6666V7.3333"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#C6F7E2"
+      android:strokeColor="#147D64"
       android:strokeLineCap="round"/>
 </vector>
