--- a/app/src/template/res/drawable/ic_unlock.xml
+++ b/app/src/template/res/drawable/ic_unlock.xml
@@ -1,20 +1,20 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:width="16dp"
+    android:height="16dp"
+    android:viewportWidth="16"
+    android:viewportHeight="16">
   <path
-      android:pathData="M19,11H5C3.8954,11 3,11.8954 3,13V20C3,21.1046 3.8954,22 5,22H19C20.1046,22 21,21.1046 21,20V13C21,11.8954 20.1046,11 19,11Z"
+      android:pathData="M12.6667,7.3333H3.3333C2.597,7.3333 2,7.9302 2,8.6666V13.3333C2,14.0696 2.597,14.6666 3.3333,14.6666H12.6667C13.403,14.6666 14,14.0696 14,13.3333V8.6666C14,7.9302 13.403,7.3333 12.6667,7.3333Z"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#147D64"
+      android:strokeColor="#CBD2D9"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M7,11.0002V7.0002C6.9988,5.7602 7.4583,4.564 8.2894,3.6438C9.1205,2.7236 10.2638,2.1451 11.4975,2.0204C12.7312,1.8958 13.9671,2.2341 14.9655,2.9695C15.9638,3.7049 16.6533,4.785 16.9,6.0002"
+      android:pathData="M4.667,7.3334V4.6668C4.6662,3.8401 4.9725,3.0427 5.5266,2.4292C6.0806,1.8158 6.8429,1.43 7.6653,1.347C8.4878,1.2639 9.3118,1.4894 9.9773,1.9796C10.6429,2.4699 11.1025,3.19 11.267,4.0001"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#147D64"
+      android:strokeColor="#CBD2D9"
       android:strokeLineCap="round"/>
 </vector>
